snl/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.preproc_if,
        $.preproc_ifdef,
        $.preproc_include,
        $.preproc_def,
        $.preproc_function_def,
        $.preproc_call,
        $.line_marker,
        $.program
      ),

    _c_code: ($) =>
      choice(
        seq("%{", alias(repeat(choice(/[^}%]/, "}", "%")), $.c_code), "}%"),
        seq("%%", alias(/[^\n]*/, $.c_code), "\n")
      ),

    program: ($) =>
      seq(
        "program",
        field("name", $.identifier),
        optional($.program_param),
        repeat($.initial_defn),
        optional($.entry),
        repeat1($.state_set),
        optional($.exit),
        repeat($.final_defn)
      ),

    program_param: ($) => seq("(", $.string_literal, ")"),
    initial_defn: ($) =>
      choice(
        $.assign,
        $.monitor,
        $.sync,
        $.syncq,
        $.declaration,
        $.foreign_declaration,
        $.option,
        $.funcdef,
        $.structdef,
        $._c_code
      ),
    final_defn: ($) => choice($.funcdef, $.structdef, $._c_code),
    entry: ($) => seq("entry", $.block),
    exit: ($) => seq("exit", $.block),

    funcdef: ($) => seq($.basetype, $.declarator, $.block),

    structdef: ($) =>
      seq(
        "struct",
        field("name", $.identifier),
        "{",
        repeat($.member_decl),
        "}",
        ";"
      ),
    member_decl: ($) => seq($.basetype, $.declarator, ";"),

    declaration: ($) => seq($.basetype, commaSep($.init_declarator), ";"),
    init_declarator: ($) => seq($.declarator, optional(seq("=", $.init_expr))),
    declarator: ($) => $._declarator,
    _declarator: ($) =>
      choice(
        $.identifier,
        $.pointer_declarator,
        $.function_declarator,
        $.array_declarator,
        seq("(", $._declarator, ")"),
        seq($.type_qualifier, $._declarator)
      ),
    function_declarator: ($) =>
      prec(
        1,
        seq(
          field("declarator", $._declarator),
          "(",
          commaSep($.param_decl),
          ")"
        )
      ),
    array_declarator: ($) => prec(1, seq($._declarator, $.subscript)),
    init_expr: ($) =>
      choice(
        seq(
          optional(seq("(", $.type_expr, ")")),
          "{",
          commaSep($.init_expr),
          "}"
        ),
        $._expr
      ),

    foreign_declaration: ($) => seq("foreign", commaSep($.identifier), ";"),

    basetype: ($) =>
      choice(
        $.prim_type,
        "evflag",
        seq(choice("enum", "struct", "union", "typename"), $.identifier),
        "void"
      ),
    prim_type: ($) =>
      choice(
        "char",
        "short",
        "int",
        "long",
        seq("unsigned", "char"),
        seq("unsigned", "short"),
        seq("unsigned", "int"),
        seq("unsigned", "long"),
        "int8_t",
        "uint8_t",
        "int16_t",
        "uint16_t",
        "int32_t",
        "uint32_t",
        "float",
        "double",
        "string"
      ),

    param_decl: ($) => choice(seq($.basetype, $.declarator), $.type_expr),

    assign: ($) =>
      seq(
        "assign",
        choice(
          seq(
            $.identifier,
            optional($.subscript),
            optional("to"),
            $.string_literal
          ),
          seq(
            $.identifier,
            optional("to"),
            "{",
            commaSep($.string_literal),
            "}"
          ),
          $.identifier
        ),
        ";"
      ),
    subscript: ($) => seq("[", $.number_literal, "]"),

    monitor: ($) => seq("monitor", $.identifier, optional($.subscript), ";"),

    sync: ($) =>
      seq(
        "sync",
        $.identifier,
        optional($.subscript),
        optional("to"),
        $.event_flag,
        ";"
      ),
    event_flag: ($) => $.identifier,

    syncq: ($) =>
      seq(
        "syncq",
        $.identifier,
        optional($.subscript),
        optional(seq(optional("to"), $.event_flag)),
        optional($.syncq_size),
        ";"
      ),
    syncq_size: ($) => $.number_literal,

    option: ($) =>
      seq("option", $.option_value, field("name", $.identifier), ";"),
    option_value: ($) => choice("+", "-"),

    state_set: ($) =>
      seq(
        "ss",
        field("name", $.identifier),
        "{",
        repeat($.ss_defn),
        repeat1($.state),
        "}"
      ),
    state: ($) =>
      seq(
        "state",
        field("name", $.identifier),
        $.state_block,
      ),
    state_block: ($) => seq(
        "{",
        repeat($.state_defn),
        optional($.entry),
        // Technically repeat1, but this hinders development
        repeat($.transition),
        optional($.exit),
        "}"
    ),
    block: ($) => seq("{", repeat($.block_defn), repeat($.statement), "}"),
    block_defn: ($) => choice($.declaration, prec(1, $._c_code)),
    statement: ($) =>
      choice(
        $.break_statement,
        $.continue_statement,
        $._c_code,
        $.block,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        seq($._comma_expr, ";")
      ),
    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          field("condition", $._comma_expr),
          ")",
          field("consequence", $.statement),
          optional($.else_statement)
        )
      ),
    _expr: ($) =>
      choice(
        $.number_literal,
        $.string_literal,
        $.identifier,
        $.parenthesized_expression,
        $.call_expression,
        prec.left($.exit_expression),
        prec.left($.subscript_expression),
        prec.left($.field_expression),
        $.update_expression,
        $.unary_expression,
        $.binary_expression,
        $.conditional_expression,
        $.assignment_expression,
        $.cast_expression,
        prec.right($.sizeof_expression),
        $.true,
        $.false,
        $.null
      ),

    parenthesized_expression: ($) => seq("(", $._comma_expr, ")"),
    call_expression: ($) =>
      prec(PREC.CALL, seq(field("function", $._expr), "(", $.args, ")")),
    binary_expression: ($) => {
      const table = [
        ["+", PREC.ADD],
        ["-", PREC.ADD],
        ["*", PREC.MULTIPLY],
        ["/", PREC.MULTIPLY],
        ["%", PREC.MULTIPLY],
        ["||", PREC.LOGICAL_OR],
        ["&&", PREC.LOGICAL_AND],
        ["|", PREC.INCLUSIVE_OR],
        ["^", PREC.EXCLUSIVE_OR],
        ["&", PREC.BITWISE_AND],
        ["==", PREC.EQUAL],
        ["!=", PREC.EQUAL],
        [">", PREC.RELATIONAL],
        [">=", PREC.RELATIONAL],
        ["<=", PREC.RELATIONAL],
        ["<", PREC.RELATIONAL],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
      ];

      return choice(
        ...table.map(([operator, precedence]) => {
          return prec.left(
            precedence,
            seq(
              field("left", $._expr),
              field("operator", operator),
              field("right", $._expr)
            )
          );
        })
      );
    },
    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $._expr),
          field(
            "operator",
            choice(
              "=",
              "*=",
              "/=",
              "%=",
              "+=",
              "-=",
              "<<=",
              ">>=",
              "&=",
              "^=",
              "|="
            )
          ),
          field("right", $._expr)
        )
      ),

    true: ($) => token(choice("TRUE", "true")),
    _comma_expr: ($) => choice($._expr, $.comma_expr),
    comma_expr: ($) => seq($._expr, ",", commaSep1($._expr)),

    args: ($) => commaSep1($._expr),

    // Taken from:
    // https://github.com/tree-sitter/tree-sitter-c/blob/master/grammar.js

    string_literal: ($) =>
      seq(
        choice('L"', 'u"', 'U"', 'u8"', '"'),
        repeat(
          choice(token.immediate(prec(1, /[^\\"\n]+/)), $.escape_sequence)
        ),
        '"'
      ),

    number_literal: ($) => {
      const separator = "'";
      const hex = /[0-9a-fA-F]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const decimalDigits = seq(
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal)))
      );
      return token(
        seq(
          optional(/[-\+]/),
          optional(choice("0x", "0b")),
          choice(
            seq(
              choice(
                decimalDigits,
                seq("0b", decimalDigits),
                seq("0x", hexDigits)
              ),
              optional(seq(".", optional(hexDigits)))
            ),
            seq(".", decimalDigits)
          ),
          optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
          repeat(choice("u", "l", "U", "L", "f", "F"))
        )
      );
    },

    char_literal: ($) =>
      seq(
        choice("L'", "u'", "U'", "u8'", "'"),
        choice($.escape_sequence, token.immediate(/[^\n']/)),
        "'"
      ),

    identifier: ($) => /[a-zA-Z_]\w*/,
